fix: Adjust position of text in card list component for improved visibility

--- a/werkstuk/frontend/applicatie/src/app/components/card-list/card-list.component.css
+++ b/werkstuk/frontend/applicatie/src/app/components/card-list/card-list.component.css
@@ -16,7 +16,7 @@
                     font-family: 'Archivo', sans-serif;
                     color: var(--secondary-color);
                     font-weight: bold;
-                    bottom: 0;
+                    bottom: 2%;
                     left: 10%;
                     font-size: 1.5rem;
                     text-transform: uppercase;
